--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/teachertalk
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.jpa.hibernate.ddl-auto = updatgite
