added message service

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<version>1.4.0.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
