--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/teachertalk
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
-
+spring.jpa.hibernate.use-new-id-generator-mappings=true
