--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 
 
